grammars/pythonParser.g4
parser grammar pythonParser;

options { tokenVocab=pythonLexer; }

@header{
   package antlr;
}

// Virtual tokens for indentation (generated by DenterHelper)
tokens { INDENT, DEDENT }

// Program is a list of statements
root: NL* (statement NL*)* EOF;

// Statements can be actions or if-statements
statement
    : action
    | ifStatement
    ;

// Actions: assignment or print
action
    : var=NAME op=ASSIGN value=expr          #AssignAction
    | PRINT LPAREN expr RPAREN               #PrintAction
    ;

// Python-like if statement with INDENT/DEDENT
ifStatement
    : IF condition COLON INDENT block DEDENT
      (ELIF condition COLON INDENT block DEDENT)*
      (ELSE COLON INDENT block DEDENT)?
    ;

// Block of statements
block
    : (statement NL*)+
    ;

// Condition expressions (boolean)
condition
    : left=condition op=AND right=condition     #AndCondition
    | left=condition op=OR right=condition      #OrCondition
    | NOT condition                             #NotCondition
    | LPAREN condition RPAREN                   #ParenCondition
    | left=expr op=comparisonOp right=expr      #CompareCondition
    | TRUE                                      #TrueCondition
    | FALSE                                     #FalseCondition
    ;

// Comparison operators
comparisonOp
    : EQ | NEQ | LT | GT | LTE | GTE
    ;



// Arithmetic expressions
expr: LPAREN expr RPAREN                             #ParenExpr
    | <assoc=right> base=expr op=POW exp=expr        #EXPONENT_OP
    | left=expr op=(MUL|DIV) right=expr              #MUL_DIV_OP
    | left=expr op=(PLUS|SUB) right=expr             #SUM_SUB_OP
    | NUM                                            #NUM
    | NAME                                           #VAR
    ;
